# HEPfit

./: .gitignore  .gitmodules  CMakeLists.txt  HEPfit.pc.in  Makefile.am  Makefile.in  NPSMEFT6dtopquark  README  README.md  aclocal.m4  annotated.html  annotated_dup.js  classes.html  configure  configure.ac  dir_030d08aee6ea3af9e4bce3d0ad58f66a.html  dir_0476eed390318da84a06e0b7d3b239e8.html  dir_0a43bfc499f9ebeef2b0f03e60d602ca.html  dir_0a824aa1f70ce3b829ef378253b085da.html  dir_0bbb4f626cefc7ec912d1945b7d75264.html  dir_0e44d9c66811534ab94d362df465f445.html  dir_0eda29277a6077c1c02542f56cc6373a.html  dir_103a9a62244c6a6c8e9e10c24cb76799.html  dir_1148ebc2b25b55095aebf6f4cbb6efca.html  dir_13570b7b75c06b6447116fbc6288351a.html  dir_1486e6593103df4335f587ef037467ee.html  dir_1fda09841859e46766797c2daa599949.html  dir_20d72151d3dcea930a9f7e40cced2f86.html  dir_23eb9b5ca4b8aa3a2e9ffd7892077be0.html  dir_2a1d1ae54f7ff317324f4d093d282dc6.html  dir_2a35cdbc810e8d630f3ea5459c9b0063.html  dir_3f6dd9fc0a6293ee5ef16474cdc65f9f.html  dir_45f4fee7a367a818cada58dd87592f28.html  dir_465531c2d26708032780abbbea8db4e7.html  dir_4cc01cf6b2389f991af5d1e95ad41656.html  dir_4eabd9f6ff1687e35aef1a29804662e8.html  dir_596224bd875d984b3b006bf710d53fa7.html  dir_5c870ee9153d33cc4c9fd73b7bb8f13d.html  dir_5db6616082cde53441490dccc55cf8fe.html  dir_6475ae33ee6efb9863764d6f6d4e7ccd.html  (+328 more)
Analysis/: CMakeLists.txt  EW.conf  Flavour.conf  FlavourWC.conf  FlavourWC_DF2.conf  GeneralSUSY.conf  HiggsKi.conf  HiggsKvKf.conf  InputParameters.h  MFV.conf  Makefile  Model.conf  MonteCarlo.conf  MonteCarlo_plots.ps  MonteCarlo_results.txt  NPEffectiveGIMR.conf  NPEffectiveGIMR_LFU_QFU.conf  NPEffectiveGIMRprime_LFU_QFU.conf  NPSMEFTd6.conf  NPSMEFTd6_LFU_QFU.conf  ParamCorrelations.eps  SUSYMassInsertion.conf  StandardModel.conf  StandardModel_FlavourTest.conf  THDM.conf  main.cpp  main_EventGeneration_example.cpp  main_ExpandedTest.cpp  main_GE_example.cpp  main_MCMC_example.cpp  main_als_test.cpp  main_df1evol_test.cpp  main_df1evol_test.cpp.save  main_libmode.cpp  main_libmode_CGO_example.cpp  main_libmode_alt.cpp  main_libmode_alt_example.cpp  main_libmode_config_example.cpp  main_libmode_example.cpp  main_libmode_header_example.cpp  (+2 more)
Analysis/WithMultiNest/: InputParameters.h  main.cpp  multinest.h
Analysis/WithPolyChord/: main.cpp
Analysis/input/: pipi_NP_win10.root  pipi_win10.root  rhorho_NP_win10.root  rhorho_win10.root  vub_win10.root
Analysis/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Analysis/tests/: RunningMass.cpp
Flavour/: CMakeLists.txt
Flavour/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Flavour/src/: AmpDB2.cpp  AmpDB2.h  AmpDD2.cpp  AmpDD2.h  AmpDK2.cpp  AmpDK2.h  AmpDS1.cpp  AmpDS1.h  ArgD.h  Asl.cpp  Asl.h  BBd.cpp  BBd.h  BClnu.cpp  BClnu.h  BClnuObservables.cpp  BClnuObservables.h  BKstarll.cpp  BKstarll.h  BR_Bdmumu.cpp  BR_Bdmumu.h  BR_Bdnunu.cpp  BR_Bdnunu.h  BR_Bsmumu.cpp  BR_Bsmumu.h  BR_Bsnunu.cpp  BR_Bsnunu.h  BR_Kmumu.cpp  BR_Kmumu.h  BR_Kp0nunu.cpp  BR_Kp0nunu.h  BR_Kppnunu.cpp  BR_Kppnunu.h  BXqll.cpp  BXqll.h  BXqllObservables.cpp  BXqllObservables.h  Bdmumu.cpp  Bdmumu.h  BdmumuOBsmumu.cpp  (+165 more)
InputParser/: CMakeLists.txt  Makefile
InputParser/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
InputParser/src/: InputParser.cpp  InputParser.h  ModelFactory.cpp  ModelFactory.h  ThFactory.cpp  ThFactory.h  ThObsFactory.cpp  ThObsFactory.h  ThObsFactoryConstants.h  ThObsFactory_BSM.cpp  ThObsFactory_Couplings.cpp  ThObsFactory_DiBoson.cpp  ThObsFactory_EW.cpp  ThObsFactory_Flavour.cpp  ThObsFactory_Higgs.cpp  ThObsFactory_HiggsLepton.cpp  ThObsFactory_LEP2.cpp  ThObsFactory_TopQuark.cpp
InputParser/tests/: newsimpletest.cpp  test.conf
LoopFunctions/: CMakeLists.txt
LoopFunctions/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
LoopFunctions/src/: BernoulliNumbers.cpp  BernoulliNumbers.h  ClausenFunctions.cpp  ClausenFunctions.h  LoopTools.cpp  LoopTools.h  LoopToolsWrapper.cpp  LoopToolsWrapper.h  PVfunctions.cpp  PVfunctions.h  Polylogarithms.cpp  Polylogarithms.h
LoopFunctions/tests/: LF_CppUnitTestClass.cpp  LF_CppUnitTestClass.h  LF_CppUnitTestRunner.cpp  LFtestclass.cpp  LFtestclass.h  LFtestrunner.cpp  LoopFunctionsTest.cpp  Makefile  PVfunctions-Limits.cpp  newtestclass.cpp  newtestclass.h  newtestrunner.cpp
MFV/: CMakeLists.txt
MFV/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
MFV/src/: MFV.cpp  MFV.h  Xmatrices.cpp  Xmatrices.h
MFV/tests/: MFVtest.cpp
NewPhysics/: CMakeLists.txt
NewPhysics/nbproject/: configurations.xml  project.xml
NewPhysics/src/: DiBosonThObservables.cpp  DiBosonThObservables.h  EWNPEpsilons.cpp  EWNPEpsilons.h  EWNPZbbbar.cpp  EWNPZbbbar.h  EW_ABC.cpp  EW_ABC.h  EW_BURGESS.cpp  EW_BURGESS.h  EW_CHMN.cpp  EW_CHMN.h  EW_TEST.cpp  EW_TEST.h  HiggsChiral.cpp  HiggsChiral.h  HiggsKigen.cpp  HiggsKigen.h  HiggsKvKf.cpp  HiggsKvKf.h  HiggsKvKfgen.cpp  HiggsKvKfgen.h  HiggsKvgenKfgen.cpp  HiggsKvgenKfgen.h  HiggsThObservables.cpp  HiggsThObservables.h  NPBR_kpnunu.cpp  NPBR_kpnunu.h  NPEffective.cpp  NPEffective.h  NPEffective1.cpp  NPEffective1.h  NPEffective2.cpp  NPEffective2.h  NPEffectiveBS.cpp  NPEffectiveBS.h  NPEffectiveGIMR.cpp  NPEffectiveGIMR.h  NPEffectiveGIMRprime.cpp  NPEffectiveGIMRprime.h  (+88 more)
Packaging/etc/: BAT-1.0.0-RC1_mpi_patch.txt  BAT-1.0.0-RC1_patch.txt  BAT-1.0.0_mpi_patch.txt  BAT-1.0.0_patch.txt  BAT_make_wrapper.sh.in  BAT_mpi_patch.txt  INSTALL  (+10 more)
StandardModel/: CMakeLists.txt  StandardModel.cpp  StandardModel.h
(+14585 files in other folders)
